# NumericalMethod_PageRank

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
150000_nodes_plots_20250524_014102/: metrics.csv  top_nodes.csv
15000_nodes_tuningOmega_plots_20250526_234514/: metrics.csv  top_nodes.csv
15000_nodes_tuningOmega_plots_20250527_153040/: top_nodes.csv
4900_nodes_plots_20250524_012703/: metrics.csv  top_nodes.csv
64000_nodes_plots_20250524_013358/: metrics.csv  top_nodes.csv
64000_nodes_plots_20250527_000118/: metrics.csv  top_nodes.csv
7500_nodes_tuningOmega_plots_20250526_234045/: top_nodes.csv
core/: google_matrix.py  graph_loader.py  transition_matrix.py
data-results/150000_nodes_plots_20250527_000651/: metrics.csv  top_nodes.csv
data-results/15000_nodes_tuningOmega_plots_20250527_153040/: metrics.csv
data-results/full_dataset_plots_20250527_001718/: metrics.csv
data-results/full_dataset_plots_cit-Patents_3.7M_nodes_20250527_120130/: metrics.csv
data-results/full_dataset_soc-LiveJournal1_4.8M_nodes_plots_20250527_120426/: top_nodes.csv
discussion/: experimental_results.md  experimental_results_en.md  experimental_results_vi.md
full_dataset_plots_20250524_014828/: metrics.csv  top_nodes.csv
full_dataset_web-BerkStan_685.2K_nodes_tuningOmega_plots_20250527_150724/: metrics.csv  top_nodes.csv
implementation/: implementation_details.md
methods/: direct_solve.py  eig_method.py  power_method.py
theory/: direct_lu.md  gauss_seidel.md  gmres.md  power_iteration.md
tools/: baseline_compare.py  evaluation.py
(+21 files in other folders)
