[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pagerank"
version = "0.1.0"
description = "Various implementations of the PageRank algorithm"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Quang Minh Tran", email = "minhtran6464.lhp@example.com"}
]
dependencies = [
    "networkx>=3.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 